# night-shift-ward-307

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: ARCHITECTURE.md  GDD.md  STORY.md
include/core/: game.h  i18n.h  state.h  utils.h
include/data/: character.h  game_state.h  player.h  time.h
include/narrative/: story.h
include/save/: save.h
include/systems/: gameplay.h  patients.h
include/ui/: box.h  input.h  renderer.h
src/: main.c
src/core/: game.c  i18n.c  state.c  utils.c
src/data/: character.c  game_state.c  player.c  time.c
src/narrative/: story.c
src/save/: save.c
src/systems/: gameplay.c  patients.c
src/ui/: box.c  input.c  renderer.c
